--- a/smallTasks/16.html
+++ b/smallTasks/16.html
@@ -5,46 +5,35 @@
     <title>Title</title>
 </head>
 <body>
-напишите сокращатель диапазонов чисел в отсортированном массиве уникальных значений.
-
-short([1, 2, 3, 4, 5, 6]) // "1-6"
-short([1, 2, 3, 5, 6, 8]) // "1-3, 5, 6, 8"
-short([-3, -2, -1, 1, 2, 3]) // "-3--1, 1-3"
-
 найдите самый длинный палиндром в строке:
 
 longestPalindrome('babad') // 'bab' или 'aba'
 longestPalindrome('cbbd') // 'bb'
 longestPalindrome('dbabddb') // 'dbabd'
 
-найдите самую длинную, неразрывную последовательность уникальных символов в строке
-
-longest('abcabcbb') // 'abc'
-longest('ababcd') // 'abcd'
-longest('bbbb') // 'b'
-longest('bbbab') // 'ba'
-longest('bbdbab') // 'dba'
-
 <script>
     "use strict";
 
-    function get(obj, path, def) {
-        let res = path
-            .replace(/\[/g, '.')
-            .replace(/\]/g, '')
-            .replace(/^\./, '')
-            .split('.')
-            .reduce((prev, curr) => {
-                return prev && prev[curr]
-            }, obj);
+    function longestPalindrome(str) {
+        const arr = str.toLowerCase().split("");
 
-        return (res === undefined) ? def : res;
+        for (let i = arr.length; i > 0; i--) {
+            for (let j = 0; j < arr.length - i + 1; j++) {
+                let string = arr.slice(j, (j + i));
+
+                if (string.join("") === string.reduceRight((prev, current) => prev + current)) {
+                    return string.join("");
+                }
+            }
+        }
+
+        return false;
     }
 
-    //console.log(get({a: {b: 1}}, 'a.b'));
-    //console.log(get({ a: { b: 1 } }, 'a.c'));
-    //console.log(get({ }, 'a.c'));
-    console.log(get({ 'a': [{ 'b': { 'c': 3 } }] }, '.a[0].b.c'));
+    console.log(longestPalindrome('babad'));
+    console.log(longestPalindrome('cbbd'));
+    console.log(longestPalindrome('dbabddb'));
+
 </script>
 
 </body>
